Разметка для блока с галереей работ

--- a/code/index.html
+++ b/code/index.html
@@ -364,6 +364,44 @@
           <p>Donec molestie, faucibus a amet commodo scelerisque libero massa. Sapien quam in eu vel nulla.</p><a href="#works">view case study</a>
         </div>
       </div>
+      <div class="work-gallery">
+        <div class="shaped"></div>
+        <h1>Additional Recent Work</h1>
+        <p class="under-title">Market-proven software with award winning design</p>
+        <nav><a href="">All</a><a href="">Websites</a><a href="">Graphic</a><a href="">Identity</a><a href="">Mobile apps</a></nav>
+        <div class="gallery-block">
+          <div class="pic">
+            <div class="img"></div>
+            <h3>Outfield</h3>
+            <p>Mobile interaction CRM for field reps</p>
+          </div>
+          <div class="pic">
+            <div class="img"></div>
+            <h3>Outfield</h3>
+            <p>Mobile interaction CRM for field reps</p>
+          </div>
+          <div class="pic">
+            <div class="img"></div>
+            <h3>Outfield</h3>
+            <p>Mobile interaction CRM for field reps</p>
+          </div>
+          <div class="pic">
+            <div class="img"></div>
+            <h3>Outfield</h3>
+            <p>Mobile interaction CRM for field reps</p>
+          </div>
+          <div class="pic">
+            <div class="img"></div>
+            <h3>Outfield</h3>
+            <p>Mobile interaction CRM for field reps</p>
+          </div>
+          <div class="pic">
+            <div class="img"></div>
+            <h3>Outfield</h3>
+            <p>Mobile interaction CRM for field reps</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
