Стили для блока с галереей работ

--- a/code/index.html
+++ b/code/index.html
@@ -368,7 +368,7 @@
         <div class="shaped"></div>
         <h1>Additional Recent Work</h1>
         <p class="under-title">Market-proven software with award winning design</p>
-        <nav><a href="">All</a><a href="">Websites</a><a href="">Graphic</a><a href="">Identity</a><a href="">Mobile apps</a></nav>
+        <nav><a href="#works" class="active">All</a><a href="#works">Websites</a><a href="#works">Graphic</a><a href="#works">Identity</a><a href="#works">Mobile apps</a></nav>
         <div class="gallery-block">
           <div class="pic">
             <div class="img"></div>
@@ -401,6 +401,7 @@
             <p>Mobile interaction CRM for field reps</p>
           </div>
         </div>
+        <button>load more</button>
       </div>
     </div>
   </body>
