--- a/code/index.html
+++ b/code/index.html
@@ -404,5 +404,21 @@
         <button>load more</button>
       </div>
     </div>
+    <div class="conten_block twitter">
+      <div class="shaped"></div>
+      <div class="twitter-block">
+        <div class="big-icon"></div>
+        <p>Premium Template - orci in adipiscing felis velit nibh. Consectetuer porttitor feugiat vestibulum sit feugiat, voluptates dui eros libero...</p>
+        <ul class="dots">
+          <li></li>
+          <li class="active"></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+        <p class="underblock">Follow me on Twitter: <a href="https://twitter.com/ABatickaya">@ABatickaya</a></p>
+      </div>
+      <div class="treangle"></div>
+    </div>
   </body>
 </html>
