--- a/code/index.html
+++ b/code/index.html
@@ -420,5 +420,32 @@
       </div>
       <div class="treangle"></div>
     </div>
+    <div class="content_block testimonial">
+      <div class="tit">
+        <h1>Our <i>testimonial</i></h1>
+        <p>What We Do With Love</p>
+        <div class="descript"><img src="../img/lines.svg">
+          <p>Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse</p>
+        </div>
+      </div>
+      <div class="logo-block"><a href=""><img src="../img/icons/sass.png" alt=""></a><a href=""><img src="../img/icons/less.png" alt=""></a><a href=""><img src="../img/icons/medium.png" alt=""></a><a href=""><img src="../img/icons/bootstrap.png" alt="" style="opacity: .7;"></a><a href=""><img src="../img/icons/jquery.png" alt=""></a></div>
+      <div class="testimonial-block">
+        <div class="testimonial-item">
+          <p>“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p><img>
+          <p class="login">@Someone famous</p>
+          <p class="article">Someone famous</p>
+        </div>
+        <div class="testimonial-item">
+          <p>“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p><img>
+          <p class="login">@Someone famous</p>
+          <p class="article">Someone famous</p>
+        </div>
+        <div class="testimonial-item">
+          <p>“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p><img>
+          <p class="login">@Someone famous</p>
+          <p class="article">Someone famous</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
