Стили для блока отзывов

--- a/code/index.html
+++ b/code/index.html
@@ -431,19 +431,96 @@
       <div class="logo-block"><a href=""><img src="../img/icons/sass.png" alt=""></a><a href=""><img src="../img/icons/less.png" alt=""></a><a href=""><img src="../img/icons/medium.png" alt=""></a><a href=""><img src="../img/icons/bootstrap.png" alt="" style="opacity: .7;"></a><a href=""><img src="../img/icons/jquery.png" alt=""></a></div>
       <div class="testimonial-block">
         <div class="testimonial-item">
-          <p>“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p><img>
+          <p class="text">“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p>
+          <hr><img src="../img/mini_photo.jpg">
           <p class="login">@Someone famous</p>
           <p class="article">Someone famous</p>
         </div>
         <div class="testimonial-item">
-          <p>“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p><img>
+          <p class="text">“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p>
+          <hr><img src="../img/mini_photo.jpg">
           <p class="login">@Someone famous</p>
           <p class="article">Someone famous</p>
         </div>
         <div class="testimonial-item">
-          <p>“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p><img>
+          <p class="text">“ornare pede montes, morbi urna sed temporibus non, nibh inceptos enim turpis natoque”</p>
+          <hr><img src="../img/mini_photo.jpg">
           <p class="login">@Someone famous</p>
           <p class="article">Someone famous</p>
+        </div>
+      </div>
+      <ul class="dots">
+        <li></li>
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="content_block pricing">
+      <div class="tit">
+        <h1>plant & <i>pricing</i></h1>
+        <p>What We Do With Love</p>
+        <div class="descript"><img src="../img/lines.svg">
+          <p>Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse</p>
+        </div>
+      </div>
+      <div class="price-shits">
+        <div class="price-item">
+          <h3>Basic Plan</h3>
+          <p class="price">25</p>
+          <ul>
+            <li>60 Users</li>
+            <li>Unlimited Forums</li>
+            <li>Unlimited Reports</li>
+            <li>3,000 Entries per Month</li>
+            <li>200 MB Storage</li>
+            <li>Unlimited Support</li>
+          </ul>
+          <button>order now</button>
+          <p class="bottom-text">30 DAYS FREE TRIAL</p>
+        </div>
+        <div class="price-item">
+          <h3>Basic Plan</h3>
+          <p class="price">25</p>
+          <ul>
+            <li>60 Users</li>
+            <li>Unlimited Forums</li>
+            <li>Unlimited Reports</li>
+            <li>3,000 Entries per Month</li>
+            <li>200 MB Storage</li>
+            <li>Unlimited Support</li>
+          </ul>
+          <button>order now</button>
+          <p class="bottom-text">30 DAYS FREE TRIAL</p>
+        </div>
+        <div class="price-item">
+          <h3>Basic Plan</h3>
+          <p class="price">25</p>
+          <ul>
+            <li>60 Users</li>
+            <li>Unlimited Forums</li>
+            <li>Unlimited Reports</li>
+            <li>3,000 Entries per Month</li>
+            <li>200 MB Storage</li>
+            <li>Unlimited Support</li>
+          </ul>
+          <button>order now</button>
+          <p class="bottom-text">30 DAYS FREE TRIAL</p>
+        </div>
+        <div class="price-item">
+          <h3>Basic Plan</h3>
+          <p class="price">25</p>
+          <ul>
+            <li>60 Users</li>
+            <li>Unlimited Forums</li>
+            <li>Unlimited Reports</li>
+            <li>3,000 Entries per Month</li>
+            <li>200 MB Storage</li>
+            <li>Unlimited Support</li>
+          </ul>
+          <button>order now</button>
+          <p class="bottom-text">30 DAYS FREE TRIAL</p>
         </div>
       </div>
     </div>
