Стили для блока цен

--- a/code/index.html
+++ b/code/index.html
@@ -458,6 +458,7 @@
       </ul>
     </div>
     <div class="content_block pricing">
+      <div class="shaped"></div>
       <div class="tit">
         <h1>plant & <i>pricing</i></h1>
         <p>What We Do With Love</p>
