Блок с контактами. Разметка и стили

--- a/code/index.html
+++ b/code/index.html
@@ -524,6 +524,34 @@
           <p class="bottom-text">30 DAYS FREE TRIAL</p>
         </div>
       </div>
+      <div class="treangle"></div>
     </div>
+    <div class="content_block touch">
+      <div class="tit">
+        <h1>get in <i>touch</i></h1>
+        <p>What We Do With Love</p>
+        <div class="descript"><img src="../img/lines.svg">
+          <p>Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse</p>
+        </div>
+      </div>
+      <form id="contacts">
+        <input type="text" name="name" placeholder="Name">
+        <input type="email" name="email" placeholder="Email">
+        <input type="text" name="subj" placeholder="Subject">
+        <textarea name="message" placeholder="Message"></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+      <div class="info">
+        <h3>ADDITIONAL INFO</h3>
+        <p>If you have any questiong about our products or something else, please email us or call us. We'll get in touch with you as soon as possible.</p>
+        <ul>
+          <li class="address">Jl. Pahlawan VII No. 247D Sidoarjo</li>
+          <li class="tel">+62 - 85745965973</li>
+          <li class="email">rudhisasmito@gmail.com</li>
+          <li class="time">Mo - Fr: 9am to 6pm</li>
+        </ul>
+      </div>
+    </div>
+    <footer></footer>
   </body>
 </html>
