--- a/code/index.html
+++ b/code/index.html
@@ -40,8 +40,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"><a href="#">
-          <object type="image/svg+xml" data="../img/logo.svg">Fe</object></a></div>
+      <div class="logo"><a href="#"></a></div>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
