OG-разметка для соц.сетей

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,14 @@
       		$('body,html').animate({scrollTop: top}, 800);
       	});
       })
+      
+      
     </script>
+    <meta property="og:title" content="Long read for Fe">
+    <meta property="og:site_name" content="Long read for Fe">
+    <meta property="og:url" content="http://epic.spb.ru/fe/code/index.html">
+    <meta property="og:description" content="Landing page for presentation any type of companies">
+    <meta property="og:image" content="http://epic.spb.ru/fe/img/main.jpg">
   </head>
   <body>
     <header>
