Заглушка для мобильных

--- a/code/index.html
+++ b/code/index.html
@@ -46,6 +46,10 @@
     <meta property="og:image" content="http://epic.spb.ru/fe/img/main.jpg">
   </head>
   <body>
+    <div class="for-mobile">
+      <h1>Привет!</h1>
+      <p>Зайди на эту страницу с компьютера!<br>Она классная <i>=)</i></p>
+    </div>
     <header>
       <div class="logo"><a href="#"></a></div>
       <nav>
